--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,12 @@
-#google-logo {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 200px;
-    max-width: 100%;
+a {
+    color:rgb(7, 6, 6);
+    text-decoration:none;
 }
 
-#search {
-    
+form {
+    display:block;
+    width:50%;
+    margin-left:25%;
+
 }
 
