--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,101 @@ a {
 }
 
 form {
-    display:block;
     width:50%;
     margin-left:25%;
 
 }
+
+#nav-top {
+    margin-top: 15px;
+    overflow:hidden;
+    font-family: sans-serif;
+    font-size: 13px;
+    color: #000000;
+    margin: 20px;
+}
+
+
+main {
+    display: block;
+    margin: auto;
+    margin-top: 170px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+#searchinput {
+    background-color: transparent;
+    border-radius: 25px;
+    border: 1px darkgrey solid;
+    width: 100%;
+    height: 40px;
+    margin: 30px 0px;
+}
+
+input:focus, textarea {
+    outline: none !important;
+}
+
+#nav-bottom {
+    background-color: #f2f2f2;
+    overflow: hidden;
+    bottom: 0;
+    width: 100%;
+    height: 55px;
+    position: absolute;
+}
+
+.right {
+    float: right;
+    margin-right:30px;
+}
+
+#nav-bottom a{
+    margin: 20px 10px;
+    font-size: 14px;
+    color: #5f6368;
+  }
+
+.button {
+    text-decoration: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    font-size: 14px;
+    display: inline-block;
+    width: auto;
+    line-height: 27px;
+    overflow: visible;
+    background-color: #f4f4f4;
+    color: #646368;
+    text-align: center;
+    border: none;
+    
+}
+
+.button:hover {
+    border:1px darkgray solid;
+    }
+
+#searchinput:hover {
+    box-shadow: 0px 1px 3px 1px rgb(233, 225, 225);
+    }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  li {
+    float:left;
+}
+
+li a {
+    margin: 10px;
+    font-family:arial,sans-serif;
+}
+
 
